# cmake-tutorial

./: .gitignore  README.md
Ep-1.1-Getting-Started-with-CMake-on-Linux/: .gitignore  CMakeLists.txt  Ep-1.1-Getting-Started-with-CMake-on-Linux.md  main.cpp
Ep-1.2-Ep-1.2-Getting-Started-with-CMake-on-Windows/: CMakeLists.txt  Ep-1.2-Ep-1.2-Getting-Started-with-CMake-on-Windows.md
Ep-2-Changing-Output-Directories-in-CMake/: CMakeLists.txt  Ep-2-Changing-Output-Directories-in-CMake.md  main.cpp
Ep-3-Create-a-library-and-use-in-our-executable/: CMakeLists.txt  Ep-3-Create-a-library-and-use-in-our-executable.md  console.cpp  console.h  main.cpp
Ep-5-Including-Sub-folder-Projects/: CMakeLists.txt  Ep-5-Including-Sub-folder-Projects.md  main.cpp
Ep-5-Including-Sub-folder-Projects/ConsoleLib/: CMakeLists.txt  ConsoleLib.hpp
Ep-5-Including-Sub-folder-Projects/ConsoleLib/header/: Input.hpp  Output.hpp
Ep-5-Including-Sub-folder-Projects/ConsoleLib/src/: Input.cpp  Output.cpp
Ep-5.1-Improvise-Sub-folder-Projects/: CMakeLists.txt  Ep-5.1-Improvise-Sub-folder-Projects.md
Ep-5.1-Improvise-Sub-folder-Projects/ConsoleExe/: CMakeLists.txt  main.cpp
Ep-5.1-Improvise-Sub-folder-Projects/ConsoleLib/: CMakeLists.txt
Ep-5.1-Improvise-Sub-folder-Projects/ConsoleLib/src/: input.cpp  output.cpp
Ep-5.2-Improvise-Sub-folder-project-and-cmakelists-file/: CMakeLists.txt  Ep-5.2-Improvise-Sub-folder-project-and-cmakelists-file.md
Ep-5.2-Improvise-Sub-folder-project-and-cmakelists-file/consoleexe/: CMakeLists.txt  main.cpp
Ep-5.2-Improvise-Sub-folder-project-and-cmakelists-file/consolelib/: CMakeLists.txt
Ep-5.2-Improvise-Sub-folder-project-and-cmakelists-file/consolelib/header/: input.hpp  output.hpp
Ep-5.2-Improvise-Sub-folder-project-and-cmakelists-file/consolelib/src/: input.cpp  output.cpp
